--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -7,7 +7,7 @@
       <h2>{{ (alert$ | async)?.alert_desc }}</h2>
     </div>
     <div class="col-12 col-sm-6 text-right">
-      <button type="submit" class="btn btn-primary" (click)="primaryModal.show()">Acknowledge</button>
+      <button type="submit" class="btn btn-primary" (click)="openModal(primaryModal)">Acknowledge</button>
     </div>
   </div>
   <div class="row">
@@ -144,7 +144,21 @@
     </div>
   </div>
 </div>
-<div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<ng-template #primaryModal>
+  <div class="modal-header">
+    <h4 class="modal-title">Success</h4>
+    <button type="button" class="close" (click)="modalRef.hide()" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Alert was acknowledged!</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modalRef.hide()">Close</button>
+  </div>
+</ng-template>
+<!-- <div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-primary" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -160,8 +174,5 @@
         <button type="button" class="btn btn-primary" (click)="primaryModal.hide()">Close</button>
       </div>
     </div>
-    <!-- /.modal-content -->
   </div>
-  <!-- /.modal-dialog -->
-</div>
-<!-- /.modal -->
+</div> -->
