change datatime format from MM/dd/yyyy to default datetime format retrieved fro api

--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -112,7 +112,7 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Time" prop="date">
                   <ng-template let-value="value" ngx-datatable-cell-template>
-                    {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                    {{value}}
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
@@ -133,7 +133,7 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Time" prop="date">
                   <ng-template let-value="value" ngx-datatable-cell-template>
-                    {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                    {{value}}
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
