--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -27,7 +27,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Odometer" prop="odometer">
@@ -61,7 +61,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Odometer" prop="odometer">
@@ -96,7 +96,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Odometer" prop="odometer">
