--- a/www-ng/src/app/views/alert-list/alert-list.component.html
+++ b/www-ng/src/app/views/alert-list/alert-list.component.html
@@ -43,7 +43,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Time" prop="event_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | date:'MM/dd/yyyy HH:mm:ss'}}
+                {{value}}
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
