make change of date output format in maintenance and monthly report page

--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -38,7 +38,7 @@
                   {{value}}
                 </ng-template>
                 <ng-template #t_date>
-                  {{value | date:'yyyymm' }}
+                  {{value | date:'yyyy-MM-dd' }}
                 </ng-template>
               </ng-template>
             </ngx-datatable-column>
