--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -5,11 +5,14 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-            <div class="col-6 col-lg-3">
+            <div class="col-8">
               <dp-date-picker mode="month" placeholder="Choose a month..."
                 [(ngModel)]="selectedDate" (close)="updateReport()"
                 [config]="datePickerConfig"
                 ></dp-date-picker>
+            </div>
+            <div class="col-4 text-right">
+              <button class="button btn-primary" (click)="exportAsCSV()">Export</button>
             </div>
           </div>
         </div>
@@ -84,9 +87,6 @@
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
-        </div>
-        <div>
-          <button class="button btn-primary" (click)="exportAsCSV()">Export</button>
         </div>
       </div>
     </div>
