update vid and month filter in maintanance log

--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-8">
               <dp-date-picker mode="month" placeholder="Choose a month..."
-                [(ngModel)]="selectedDate" (close)="updateReport()"
+                [(ngModel)]="selectedDate" (close)="loadReport()"
                 [config]="datePickerConfig"
                 ></dp-date-picker>
             </div>
