--- a/www-ng/src/app/views/data-log/maintenance.component.html
+++ b/www-ng/src/app/views/data-log/maintenance.component.html
@@ -10,17 +10,26 @@
                 type="text"
                 class="ioc-table-filter text-left"
                 placeholder="Bus No ..."
+                (keyup)="updateFilter($event)"
               />
             </div>
             <div class="col col-md-1 col-lg-3"></div>
             <div class="col-12 col-md-6">
-              <form [formGroup]="myForm" novalidate
+              <!-- <form [formGroup]="myForm" novalidate
                 class="text-left">
                   <my-date-range-picker name="mydaterange" 
                     [options]="myDateRangePickerOptions"
+                    (dateRangeChanged)="onDateRangeChanged($event)"
                     formControlName="myDateRange">
                   </my-date-range-picker>
-              </form>
+              </form> -->
+              <div class="col-8">
+                <dp-date-picker mode="month" placeholder="Choose a month..."
+                  [(ngModel)]="selectedDate" 
+                  (close)="reloadData()"
+                  [config]="datePickerConfig"
+                  ></dp-date-picker>
+              </div>
             </div>
           </div>
         </div>
