update month picker in daily routine and connection page

--- a/www-ng/src/app/views/data-log/maintenance.component.html
+++ b/www-ng/src/app/views/data-log/maintenance.component.html
@@ -23,7 +23,7 @@
                     formControlName="myDateRange">
                   </my-date-range-picker>
               </form> -->
-              <div class="col-8">
+              <div class="col-8 text-right">
                 <dp-date-picker mode="month" placeholder="Choose a month..."
                   [(ngModel)]="selectedDate" 
                   (close)="reloadData()"
