add secondary module filters for snapshot & alert page

--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -63,10 +63,10 @@
               </div>
             </div>
           </div>
-          <div class="row no-gutters" *ngIf="snapshots$ | async; else defaultItems; let snapshots">
-            <div class="col-3 col-md-2 col-xl-1" *ngFor="let s of snapshots">
+          <div class="row no-gutters" *ngIf="secondaryModules$ | async; else defaultItems; let modules">
+            <div class="col-3 col-md-2 col-xl-1" *ngFor="let m of modules">
               <div class="card text-icon-green m-1">
-                <div class="card-body text-center small px-0">{{s.item}}</div>
+                <div class="card-body text-center small px-0">{{m.module_name}}</div>
               </div>
             </div>
             <div class="col-3 col-md-2 col-xl-1" *ngFor="let s of greyIcons$ | async">
@@ -92,8 +92,23 @@
     <div class="col-12 col-sm-5">
       <div class="card">
         <div class="card-body">
-          <ngx-datatable #tableSnapshot class='material' [columns]="colsSnapshot" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0"
+          <ngx-datatable #tableSnapshot class='material' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0"
             [rowHeight]="'auto'" [limit]="10" [rows]='snapshots$ | async'>
+            <ngx-datatable-column name="Item" prop="item">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Value" prop="value">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value | number:'1.0-1'}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Unit" prop="unit">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
           </ngx-datatable>
         </div>
       </div>
@@ -158,21 +173,3 @@
     <button type="button" class="btn btn-primary" (click)="modalRef.hide()">Close</button>
   </div>
 </ng-template>
-<!-- <div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-primary" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Success</h4>
-        <button type="button" class="close" (click)="primaryModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Alert was acknowledged!</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="primaryModal.hide()">Close</button>
-      </div>
-    </div>
-  </div>
-</div> -->
