--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -3,7 +3,14 @@
     <div class="col-12 col-md-5">
       <div class="card">
         <div class="card-header">
-          Bus No. {{ (vehicle$ | async)?.vehicle_number }}
+          <div class="row">
+            <div class="col-md-5">
+              Bus No. {{ (snapshot$ | async)?.vehicle_number }}
+            </div>
+            <div class="col-md-7 text-right">
+              {{(snapshot$ | async)?.date}}
+            </div>
+          </div>
         </div>
         <div class="card-body">
           <agm-map *ngIf="locations$ | async; else defaultMap; let loc"
