--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -4,10 +4,10 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-            <div class="col-md-5">
+            <div class="col-5">
               Bus No. {{ (snapshot$ | async)?.vehicle_number }}
             </div>
-            <div class="col-md-7 text-right">
+            <div class="col-7 text-right">
               {{(snapshot$ | async)?.date}}
             </div>
           </div>
