--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -27,7 +27,7 @@
           <agm-map *ngIf="locations$ | async; else defaultMap; let loc" style="height: 300px" [zoom]=12 [streetViewControl]=false [latitude]="loc.latitude | toNumber"
             [longitude]="loc.longitude | toNumber">
             <agm-marker [latitude]="loc.latitude | toNumber" [longitude]="loc.longitude | toNumber">
-              <agm-info-window>{{loc.altitude}}</agm-info-window>
+              <agm-info-window>alt: {{loc.altitude ? loc.altitude : 'n/a'}}</agm-info-window>
             </agm-marker>
           </agm-map>
           <ng-template #defaultMap>
