--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -76,7 +76,7 @@
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Updated" prop="update_time">
+            <ngx-datatable-column name="Updated" prop="update_time" [width]="200">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
