--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -104,18 +104,18 @@
             [footerHeight]="0"
             [rowHeight]="'auto'"
             [limit]="10"
-            [rows]='snapshots$ | async'>
+            [rows]='items$ | async'>
             <ngx-datatable-column name="Item" prop="item">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Value" prop="value">
+            <ngx-datatable-column name="Value" prop="value" [width]="50">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value | number:'1.0-1'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Unit" prop="unit">
+            <ngx-datatable-column name="Unit" prop="unit" [width]="50">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
