--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -76,7 +76,9 @@
                 <div class="card-body text-center small px-0">{{m.module_name}}</div>
               </div>
             </div>
-            <div class="col-3 col-md-2 col-xl-1" *ngFor="let s of greyIcons$ | async">
+            <!-- <div class="col-3 col-md-2 col-xl-1" *ngFor="let s of greyIcons$ | async"> -->
+            <div class="col-3 col-md-2 col-xl-1"
+              *ngFor="let s of utility.getGreyIcons(modules)">
               <div class="card text-icon-grey m-1">
                 <div class="card-body text-center small">&nbsp;&nbsp;</div>
               </div>
