--- a/www-ng/src/app/views/fleet/snapshot.component.scss
+++ b/www-ng/src/app/views/fleet/snapshot.component.scss
@@ -28,3 +28,12 @@ $icon-height: 75px;
     height: $icon-height;
     background-color: #c9c9c9
 }
+
+.grey-layer {
+    background-color: rgba(248, 247, 216, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
